# Escolta

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXTENDED_FEATURES.md  README.md  RECOVERY.md  config.example.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Sogiza/Sogiza/: AppDelegate.swift
__MACOSX/Sogiza/: ._Podfile  ._Sogiza.xcodeproj  ._Sogiza.xcworkspace
artifacts/apk/: escolta.apk
config/: escota.yaml
docs/: BUILD_NOTES.md  DEVELOPMENT.md  INSTALLATION.md
docs/escorta/: Algumas imagens dos apps e site com registros, etc..docx  Apresentação1.pptx  Imagem loka.pptx  Imagens e comentários de problemas existentes.docx  Imagens e comentários do site Bairro Inteligente e App Morador e Escolta.docx  Lista Escolta ingles.docx  Lista Escolta.docx  Proposta_AppEscolta-R1.docx
docs/manuals/: Comentários Léo 1.docx  Lista Escolta.docx
escolta/: __init__.py
escolta/alerts/: __init__.py  alert_manager.py  notification.py
escolta/api/: __init__.py  server.py
escolta/config/: __init__.py  config_manager.py
escolta/core/: __init__.py  event_handler.py  security_monitor.py
escolta/database/: __init__.py  models.py
escolta/sensors/: __init__.py  base_sensor.py  camera_sensor.py  motion_sensor.py
examples/: README.md  alert_example.py  config_example.py  database_example.py  email_example.py  webui_example.py
tests/: __init__.py  test_alert.py  test_camera.py  test_config.py  test_database.py  test_detector.py  test_notifier.py  test_webui.py
(+88 files in other folders)
